<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.nearby.NearByActivity">

    <TextView
        android:id="@+id/resultNumber"
        android:layout_width="350dp"
        android:layout_height="110dp"
        android:background="@drawable/rectangle"
        android:elevation="20dp"
        android:gravity="center"
        android:text="@string/resultin"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:translationZ="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <TextView
        android:id="@+id/resultSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:text="@string/resultsub"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/resultNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/resultNumber"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/catatanTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catatan"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

    <TextView
        android:id="@+id/catatan"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/catatanSub"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultNumber"
        app:layout_constraintVertical_bias="0.089" />

</androidx.constraintlayout.widget.ConstraintLayout>