<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.detail_result.DetailResultActivity">


    <TextView
        android:id="@+id/resultNumber"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:background="@drawable/rectangle"
        android:elevation="20dp"
        android:gravity="center_horizontal"
        android:text="@string/resultin"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="100sp"
        android:translationZ="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <TextView
        android:id="@+id/resultSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:text="@string/resultsub"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/seeMoretBtn"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:drawableRight="@drawable/ic_baseline_arrow_right_alt_24"
        android:drawablePadding="20dp"
        android:elevation="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="25dp"
        android:text="@string/see_more_result"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.109" />

</androidx.constraintlayout.widget.ConstraintLayout>